--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "console-stamp": "^0.2.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "errorhandler": "^1.4.3",
+    "express": "^4.13.4",
+    "file-stream-rotator": "0.0.6",
     "fs": "0.0.2",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
+    "morgan": "^1.6.1",
     "serve-favicon": "~2.3.0"
   }
 }
